MID-10157 cleanup path custom action can't be edited fix
(cherry picked from commit 3a8d2907fa8a70148da05c3d6e402fd4b00ebf9e)